// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reactive rx test suite test helloRL dispatch one time 1`] = `
Array [
  "Store init 🚀",
  "Actor:reduce HelloActor",
  "parse:rl -> helloRL",
  "🔥:tracing: QL(helloQL)",
  "dep:mott, cache:false, value:\\"plume2\\"",
  "QL(helloQL)|> \\"plume2\\"",
  "store dispatch => 'change'",
  "HelloActor receive => 'change'",
]
`;

exports[`reactive rx test suite test helloRL dispatch second time 1`] = `
Array [
  "Store init 🚀",
  "Actor:reduce HelloActor",
  "parse:rl -> helloRL",
  "🔥:tracing: QL(helloQL)",
  "dep:mott, cache:false, value:\\"plume2\\"",
  "QL(helloQL)|> \\"plume2\\"",
  "store dispatch => 'change'",
  "HelloActor receive => 'change'",
  "store dispatch => 'change'",
  "HelloActor receive => 'change'",
]
`;

exports[`reactive rx test suite test helloRL dispatch transaction 1`] = `
Array [
  "Store init 🚀",
  "Actor:reduce HelloActor",
  "parse:rl -> helloRL",
  "🔥:tracing: QL(helloQL)",
  "dep:mott, cache:false, value:\\"plume2\\"",
  "QL(helloQL)|> \\"plume2\\"",
  "::::::::::::::::🚀 open new transaction 🚀::::::::::::::::::",
  "store dispatch => 'change'",
  "HelloActor receive => 'change'",
  "store dispatch => 'change'",
  "HelloActor receive => 'change'",
  "store dispatch => 'c'",
  "params|> immutable[yes] ",
  Object {
    "addr": Object {
      "city": "nanjing",
      "province": "jiangsu",
    },
    "id": 1,
    "name": "plume2",
  },
]
`;

exports[`reactive rx test suite test helloRl 1`] = `
Array [
  "Store init 🚀",
  "Actor:reduce HelloActor",
  "parse:rl -> helloRL",
  "🔥:tracing: QL(helloQL)",
  "dep:mott, cache:false, value:\\"plume2\\"",
  "QL(helloQL)|> \\"plume2\\"",
]
`;
